m/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 80
      protocol: TCP
      name: https
